tests/ui/type-alias-impl-trait/assoc-type-lifetime-unconstrained.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/assoc-type-lifetime-unconstrained.rs:17:6
   |
LL | impl<'a, I> UnwrapItemsExt for I {
   |      ^^ unconstrained lifetime parameter
   |
help: this use of an otherwise unconstrained lifetime is not allowed
  --> $DIR/assoc-type-lifetime-unconstrained.rs:19:17
   |
LL |     type Iter = impl MyTrait<'a>;
   |                 ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
